Add name to unused FDLAST in BOOTLDR

--- a/dos33.html
+++ b/dos33.html
@@ -5753,7 +5753,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     432 <a class='e' name='FDTRK'    >FDTRK       </a>EQU 0           ; TRACK
                     433 <a class='e' name='FDSEC'    >FDSEC       </a>EQU 1           ; SECTOR
                     434 ;
-                    435 FDLAST      EQU FILDIR+256                                  ; $3900 ($B900)
+                    435 <a class='d' name='FDLAST'   >FDLAST      </a>EQU FILDIR+256                                  ; $3900 ($B900) -- never referenced
                     436             DEND
 </pre>
 
