--- a/dos33.html
+++ b/dos33.html
@@ -2514,7 +2514,7 @@ With that "legalese" out of the way ... enjoy the read!
                     236             STA RSTATE      ; INDICATE APSFT RUN
 <hr>                    237 ERUN0       JSR ELOAD       ; LOAD PGM                      ; === <a class='page' name='page144'>144</a> ===
                     238 ERUN1       JSR PRCRIF      ;REENTRY POINT FOR ASFT RELOC
-                    239             JSR MVCSW       ; GO RESTORE CHAR I/O SW        ; What keeps futzing with CIN / COUT ??
+                    239             JSR MVCSW       ; GO RESTORE CHAR I/O SW        ; <span class='todo'>TODO</span> What keeps futzing with CIN / COUT ??
                     240             JMP (RUN)
                     241 ;
                     242 ; IBRUN - INT BASIC RUN
