--- a/dos33.html
+++ b/dos33.html
@@ -2671,134 +2671,134 @@ With that "legalese" out of the way ... enjoy the read!
                     119 ; EEXEC - EXECUTE EXEC CMD
                     120 ;
                     121 EEXEC       EQU *
-                    122 
-                    123 
-                    124 
-                    125 
-                    126 
-                    127 
-                    128 
-                    129 
-                    130 
-                    131 
-                    132 
-                    133 
-                    134 
-                    135 
-                    136 
-                    137 
-                    138 
-                    139 
-                    140 
-                    141 
-                    142 
-                    143 
-                    144 
-                    145 
-                    146 
-                    147 
-                    148 
-                    149 
-                    150 
-                    151 
-                    152 
-                    153 
-                    154 
-                    155 
-                    156 
-                    157 
-                    158 
-                    159 
-                    160 
-                    161 
-                    162 
-                    163 
-                    164 
-                    165 
-                    166 
-                    167 
-                    168 
-                    169 
-                    170 
-                    171 
-                    172 
-                    173 
-                    174 
-                    175 
-                    176 
-                    177 
-                    178 
-                    179 
-                    180 
-                    181 
-                    182 
-                    183 
-                    184 
-                    185 
-                    186 
-                    187 
-                    188 
-                    189 
-                    190 
-                    191 
-                    192 
-                    193 
-                    194 
-                    195 
-                    196 
-                    197 
-                    198 
-                    199 
-                    200 
-                    201 
-                    202 
-                    203 
-                    204 
-                    205 
-                    206 
-                    207 
-                    208 
-                    209 
-                    210 
-                    211 
-                    212 
-                    213 
-                    214 
-                    215 
-                    216 
-                    217 
-                    218 
-                    219 
-                    220 
-                    221 
-                    222 
-                    223 
-                    224 
-                    225 
-                    226 
-                    227 
-                    228 
-                    229 
-                    230 
-                    231 
-                    232 
-                    233 
-                    234 
-                    235 
-                    236 
-                    237 
-                    238 
-                    239 
-                    240 
-                    241 
-                    242 
-                    243 
-                    244 
-                    245 
-                    246 
-                    247 
-                    248 
-                    249 
+                    122             JSR EOPEN       ; OPEN FILE
+                    123             LDA CFTABA      ; MOVE TABLE POINTERS
+                    124             STA EFTABA
+                    125             LDA CFTABA+1
+                    126             STA EFTABA+1
+                    127             LDA FNAME1      ; USE FILNAME                   ; *spelling* Filename
+                    128             STA ESTATE      ; SET EXSTATE NON ZERO
+                    129             BNE EXP2
+                    130 ;
+                    131 ;
+                    132 ; EPOS - EXECUTE POSITION
+                    133 ;
+                    134 EPOS        EQU *
+                    135             JSR FILSRC
+                    136             BCC EXP1
+                    137             JSR EOPEN
+                    138             JMP EXP2
+                    139 EXP1        JSR MVBUFP
+                    140 EXP2        EQU *
+                    141             LDA INOPTS      ; GET OPTIONS
+                    142             AND #R          ; TEST R
+                    143             BEQ EX2         ; BR NOT R
+                    144 ;
+                    145 EX0         LDA CR          ; IF CR NOT ZERO
+                    146             BNE EX1A        ; THEN DECREMENT
+                    147             LDX CR+1
+                    148             BEQ EX2
+                    149             DEC CR+1
+                    150 EX1A        DEC CR
+                    151 EX1         JSR RBYTE       ; AND READ A RECORD
+                    152             BEQ ICFD4
+                    153             CMP #$8D        ; UNTIL CR                      ; <a class='magic' name='_'>magic number</a> KEY_CR_HI
+                    154             BNE EX1
+                    155             BEQ EX0         ; THEN TEST CR AGAIN
+                    156 ;
+                    157 EX2         RTS
+                    158             PAGE
+                    159 ;
+                    160 ; OCTD - OUTPUT A CHAR TO DISK
+                    161 ;
+                    162 OCTD        EQU *
+                    163             JSR TSTRUN      ; GO TEST RUN
+                    164             BCS ICFDB       ;BRANCH IF NOT RUN MODE
+                    165             LDA SVA         ; CHAR IN SAVED ACU
+                    166             STA CCBDAT      ; PUT INTO CCBDATA AREA
+                    167             LDA #CRQWR      ; SET WRITE
+                    168             STA CCBREQ
+                    169             LDA #CRMNBT     ; SET NEXT BYTE
+                    170             STA CCBRQM
+                    171             JMP DOSGO       ; GO WRITE BYTE
+                    172 ;
+                    173 ; INCFD - INPUT A CHAR FROM DISK
+                    174 ;
+                    175 ICFD        EQU *
+                    176             JSR TSTRUN      ; GO TEST RUN
+                    177             BCS ICFDB       ;BRANCH IF NOT RUN MODE
+                    178             LDA #6          ; SET OUT STE = 6               ; <a class='magic' name='_'>magic number</a>
+                    179 ICFD3       EQU *
+<hr>                    180             STA OSTATE      ; TO CATCH ECHO                 ; === Page <a class='page' name='page148'>148</a> ===
+                    181             JSR RBYTE
+                    182             BNE ICFD1       ; BR IF NOT ZERO CHAR
+                    183 ICFD2       EQU *
+                    184             JSR CLOSE
+                    185             LDA #3                                          ; <a class='magic' name='_'>magic number</a>
+                    186             CMP OSTATE
+                    187             BEQ EX2
+                    188 ICFD4       EQU *
+                    189             LDA #CREEOF
+                    190             JMP ERROR       ; GO TO ERROR                   ; /sarcasm No shit, Sherlock -- HOW did we get here?
+                    191 ICFD1       EQU *
+                    192             CMP #$E0        ;CHECK FOR LOWER CASE
+                    193             BCC ICFNLC      ;BRANCH IF NOT LOWER-CASE
+                    194             AND #$<span class='n'>7F</span>        ;STRIP HI BIT TO FOOL GETLINE
+                    195 ICFNLC      EQU *
+                    196             STA SVA         ; PUT INTO SAVED ACU
+                    197             LDX SVX         ; MUST CHECK LAST FOR LOWER CASE
+                    198             BEQ ICFD0       ;IGNORE IF FIRST CHAR.
+                    199             DEX
+                    200             LDA LBUFF,X
+                    201             ORA #$<span class='n'>80</span>        ;RESET HI BIT
+                    202             STA LBUFF,X     ; EVEN THOUGH IT MAY NOT NEED IT
+                    203 ICFD0       EQU *
+                    204             JMP ORTN        ; GO RESTORE REGS AND RTS
+                    205 ;
+                    206 <a class='f' name='TSTRUN'   >TSTRUN      </a>PHA
+                    207             LDA ASIBSW      ; GET AS/INT BASIC SWITCH
+                    208             BEQ TR1         ; BR IF INT
+                    209             LDX $<span class='n'>76</span>         ;CHECK APPLESOFT RUN FLAG       ; <a class='magic' name='_'>magic number</a>
+                    210             INX             ;(NOT RUN=0 AFTER INCREMENT)
+                    211             BEQ NOTRUN      ;IF SAYS RUNNING MAKE SURE WITH PROMPT.
+                    212             LDX PROMPT      ;TEST APPLESOFT RUNNING.
+                    213             CPX #']'+$<span class='n'>80</span>
+                    214             BEQ NOTRUN      ; BR IF NOT RUN
+                    215 TR0         PLA
+                    216             CLC             ;INDICATE PROGRAM RUNNING
+                    217             RTS
+                    218 TR1         EQU *
+                    219             LDA $<span class='n'>D9</span>         ; GET INT RUN FLAG              ; <a class='magic' name='_'>magic nubmer</a>
+                    220             BMI TR0         ; BR IF RUN
+                    221 NOTRUN      PLA             ;INDICATE PROGRAM NOT RUNNING
+                    222             SEC             ; WITH CARRY SET.
+                    223             RTS
+                    224 ;
+                    225 ICFDB       EQU *           ; NOT RUN MODE
+                    226             JSR CLOSE       ; GO CLOSE FIEL
+                    227             JSR CLRSTS      ; GO CLEAR STATES
+                    228             JMP <a class='x' href='#ORTN'>ORTN</a>                                        ;
+                    229             PAGE
+                    230 ;
+                    231 ; NXTEXC - NEXT EXECUTE CHAR
+                    232 ;
+                    233 NXTEXC      EQU *
+                    234             JSR MVEFTA
+                    235             JSR MVBUFP      ; GO MOVE PTRS
+                    236             LDA #3
+                    237             BNE ICFD3                                       ; &uarr; (always)
+                    238 ;
+                    239 ; RBYTE - READ NEXT BYTE
+                    240 ;
+                    241 RBYTE       EQU *
+                    242             LDA #CRQRD      ; SET READ
+                    243             STA CCBREQ
+                    244             LDA #CRMNBT     ; SET NEXT BYTE
+                    245             STA CCBRQM
+                    246             JSR DOSGO       ; GO TO DOS
+                    247             LDA CCBDAT      ; GET THE DATA BYTE
+                    248             RTS
+                    249 MVEFTA      EQU *
 269D:AD B5 2A       250             LDA EFTABA+1        ; MOVE TABLE ADR
 26A0:85 41          251             STA ZPGWRK+1        ; NO ZPG
 26A2:AD B4 2A       252             LDA EFTABA
